Table Student {
  id SERIAL [primary key]
  first_name VARCHAR(50) [not null]
  last_name VARCHAR(50) [not null]
  email VARCHAR(255) [unique, not null]
  address_id INTEGER [not null, ref: > Address.id]
  personal_info_id INTEGER [not null, ref: > PersonalInfo.id]
 
}

Table Address {
  id SERIAL [primary key]
  address VARCHAR(255) [not null]
  zip_code VARCHAR(50) [not null]
  locality VARCHAR(50) [not null]
  city VARCHAR(50) [not null]
}

Table PersonalInfo {
  id SERIAL [primary key]
  personal_identification_number VARCHAR(50) [not null]
  emergency_contact_info VARCHAR(50) [not null]
  emergency_contact_number VARCHAR(50) [not null]
}

Table VocationalUniversity {
  id SERIAL [primary key]
  title VARCHAR(100) [not null]
  establishment_date DATE
}

Table VuLocation {
  id SERIAL [primary key]
  vocational_university_id INTEGER [not null, ref: > VocationalUniversity.id]
  address_id INTEGER [not null, ref: > Address.id]
}

Table Employee {
  id SERIAL [primary key]
  first_name VARCHAR(50) [not null]
  last_name VARCHAR(50) [not null]
  hire_date DATE [not null]
  resignation_date DATE
  profession VARCHAR(50) [not null]
  employment_type VARCHAR(50) [not null]
  address_id INTEGER [not null, ref: > Address.id]
  personal_info_id INTEGER [not null, ref: > PersonalInfo.id]
  vu_location_id INTEGER [not null, ref: > VuLocation.id]
}

Table ConsultantCompany {
  id SERIAL [primary key]
  organisation_number VARCHAR(100) [not null]
  organisation_name VARCHAR(100) [not null]
  organisation_type VARCHAR(100) [not null]
  f_skatt BOOLEAN [not null]
  address_id INTEGER [not null, ref: > Address.id]
}

Table Consultant {
  id SERIAL [primary key]
  rate INTEGER [not null]
  consultant_company_id INTEGER [not null, ref: > ConsultantCompany.id]
  employee_id INTEGER [not null, ref: > Employee.id]
}

Table Instructor {
  id SERIAL [primary key]
  employee_id INTEGER [not null, unique, ref: > Employee.id]
}

Table ProgramDirector {
  id SERIAL [primary key]
  employee_id INTEGER [not null, unique, ref: > Employee.id]
}

Table Subject {
  id SERIAL [primary key]
  subject_name VARCHAR(100) [not null]
  subject_area VARCHAR(100) [not null]
}

Table Course {
  id SERIAL [primary key]
  course_name VARCHAR(100) [not null]
  course_code VARCHAR(50) [not null]
  point VARCHAR(50) [not null]
  status VARCHAR(50) [not null]
  subject_id INTEGER [not null, ref: > Subject.id]
  course_description VARCHAR(255)
  is_independent_course BOOLEAN [not null]
}

Table Program {
  id SERIAL [primary key]
  program_name VARCHAR(100) [not null]
  program_year INTEGER [not null]
  status VARCHAR(50) [not null]
}

Table ProgramCourse {
  course_id INTEGER [not null, ref: > Course.id]
  program_id INTEGER [not null, ref: > Program.id]
}

Table Class {
  id SERIAL [primary key]
  class_label VARCHAR(100) [not null]
  class_grade VARCHAR(100) [not null]
  class_year INTEGER [not null]
  course_id INTEGER [not null, ref: > Course.id]
  vu_location_id INTEGER [not null, ref: > VuLocation.id]
  program_director_id INTEGER [not null, ref: > ProgramDirector.id]
}

Table ClassInstructor {
  class_id INTEGER [not null, ref: > Class.id]
  instructor_id INTEGER [not null, ref: > Instructor.id]
}

Table Enrollment {
  id SERIAL [primary key]
  status VARCHAR(50) [not null]
  student_id INTEGER [not null, ref: > Student.id]
  class_id INTEGER [not null, ref: > Class.id]
}
